--- a/week_2.ipynb
+++ b/week_2.ipynb
@@ -15,363 +15,6 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 803
-        },
-        "id": "8wEOSqJaDhjc",
-        "outputId": "50d02595-eafd-4baa-e4d4-17899b14e1cb"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Columns after encoding: Index(['age', 'fnlwgt', 'education-num', 'capital-gain', 'capital-loss',\n",
-            "       'hours-per-week', 'workclass_Federal-gov', 'workclass_Local-gov',\n",
-            "       'workclass_Never-worked', 'workclass_Private',\n",
-            "       ...\n",
-            "       'native-country_South', 'native-country_Taiwan',\n",
-            "       'native-country_Thailand', 'native-country_Trinadad&Tobago',\n",
-            "       'native-country_United-States', 'native-country_Vietnam',\n",
-            "       'native-country_Yugoslavia', 'income_<=50K.', 'income_>50K',\n",
-            "       'income_>50K.'],\n",
-            "      dtype='object', length=103)\n",
-            "Multiple income columns found: ['income_<=50K.', 'income_>50K', 'income_>50K.']\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/torch/nn/modules/loss.py:608: UserWarning: Using a target size (torch.Size([39073, 3])) that is different to the input size (torch.Size([39073, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-            "  return F.mse_loss(input, target, reduction=self.reduction)\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Epoch [50/500], Loss: 0.9594\n",
-            "Epoch [100/500], Loss: 0.9556\n",
-            "Epoch [150/500], Loss: 0.9534\n",
-            "Epoch [200/500], Loss: 0.9510\n",
-            "Epoch [250/500], Loss: 0.9493\n",
-            "Epoch [300/500], Loss: 0.9474\n",
-            "Epoch [350/500], Loss: 0.9462\n",
-            "Epoch [400/500], Loss: 0.9440\n",
-            "Epoch [450/500], Loss: 0.9422\n",
-            "Epoch [500/500], Loss: 0.9404\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[1m306/306\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n"
-          ]
-        },
-        {
-          "ename": "ValueError",
-          "evalue": "non-broadcastable output operand with shape (9769,1) doesn't match the broadcast shape (9769,3)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-0a7159329c2b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    129\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m \u001b[0;31m# Inverse transform predictions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 131\u001b[0;31m \u001b[0my_pred_pytorch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscaler_y\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minverse_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred_pytorch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    132\u001b[0m \u001b[0my_pred_tf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscaler_y\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minverse_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred_tf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscaler_y\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minverse_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/sklearn/preprocessing/_data.py\u001b[0m in \u001b[0;36minverse_transform\u001b[0;34m(self, X, copy)\u001b[0m\n\u001b[1;32m   1123\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1124\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_std\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1125\u001b[0;31m                 \u001b[0mX\u001b[0m \u001b[0;34m*=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscale_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1126\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_mean\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1127\u001b[0m                 \u001b[0mX\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: non-broadcastable output operand with shape (9769,1) doesn't match the broadcast shape (9769,3)"
-          ]
-        }
-      ],
-      "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import requests\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.optim as optim\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.metrics import mean_squared_error, r2_score\n",
-        "import tensorflow as tf\n",
-        "from tensorflow import keras\n",
-        "from tensorflow.keras.callbacks import EarlyStopping\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# Download dataset\n",
-        "url = \"https://raw.githubusercontent.com/farrelrassya/teachingMLDL/main/02.%20Deep%20Learning/Dataset/income.csv\"\n",
-        "response = requests.get(url)\n",
-        "with open(\"income.csv\", \"wb\") as file:\n",
-        "    file.write(response.content)\n",
-        "\n",
-        "# Load dataset\n",
-        "df = pd.read_csv(\"income.csv\")\n",
-        "\n",
-        "# Ensure column names are stripped of whitespace\n",
-        "df.columns = df.columns.str.strip()\n",
-        "\n",
-        "# Handle missing values\n",
-        "imputer = SimpleImputer(strategy='mean')\n",
-        "df.loc[:, df.select_dtypes(include=[np.number]).columns] = imputer.fit_transform(df.select_dtypes(include=[np.number]))\n",
-        "\n",
-        "# Convert categorical columns to numeric\n",
-        "df = pd.get_dummies(df, drop_first=True)\n",
-        "\n",
-        "# Print column names to debug missing 'income'\n",
-        "print(\"Columns after encoding:\", df.columns)\n",
-        "\n",
-        "# Ensure correct target column selection\n",
-        "income_cols = [col for col in df.columns if 'income' in col]\n",
-        "\n",
-        "if len(income_cols) == 1:\n",
-        "    y = df[[income_cols[0]]]  # Ambil satu-satunya kolom income\n",
-        "elif len(income_cols) > 1:\n",
-        "    print(\"Multiple income columns found:\", income_cols)\n",
-        "    y = df[income_cols]  # Bisa mengambil semua kategori income jika perlu\n",
-        "else:\n",
-        "    raise KeyError(\"Column 'income' not found in dataset after encoding.\")\n",
-        "\n",
-        "X = df.drop(columns=income_cols)\n",
-        "\n",
-        "# Normalize features and target\n",
-        "scaler_X = StandardScaler()\n",
-        "scaler_y = StandardScaler()\n",
-        "X = scaler_X.fit_transform(X)\n",
-        "y = scaler_y.fit_transform(y)\n",
-        "\n",
-        "# Split dataset\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-        "\n",
-        "# Convert data to tensors\n",
-        "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
-        "X_test_tensor = torch.tensor(X_test, dtype=torch.float32)\n",
-        "y_train_tensor = torch.tensor(y_train, dtype=torch.float32)\n",
-        "y_test_tensor = torch.tensor(y_test, dtype=torch.float32)\n",
-        "\n",
-        "# Define PyTorch Neural Network\n",
-        "class NeuralNetwork(nn.Module):\n",
-        "    def __init__(self, input_dim):\n",
-        "        super(NeuralNetwork, self).__init__()\n",
-        "        self.fc1 = nn.Linear(input_dim, 512)\n",
-        "        self.fc2 = nn.Linear(512, 256)\n",
-        "        self.fc3 = nn.Linear(256, 128)\n",
-        "        self.fc4 = nn.Linear(128, 64)\n",
-        "        self.fc5 = nn.Linear(64, 1)\n",
-        "        self.relu = nn.ReLU()\n",
-        "        self.dropout = nn.Dropout(0.2)\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        x = self.relu(self.fc1(x))\n",
-        "        x = self.dropout(x)\n",
-        "        x = self.relu(self.fc2(x))\n",
-        "        x = self.dropout(x)\n",
-        "        x = self.relu(self.fc3(x))\n",
-        "        x = self.dropout(x)\n",
-        "        x = self.fc4(x)\n",
-        "        x = self.fc5(x)\n",
-        "        return x\n",
-        "\n",
-        "# Initialize model\n",
-        "model = NeuralNetwork(X_train.shape[1])\n",
-        "\n",
-        "# Loss and optimizer\n",
-        "criterion = nn.MSELoss()\n",
-        "optimizer = optim.Adam(model.parameters(), lr=0.0001, weight_decay=1e-5)\n",
-        "\n",
-        "# Train model\n",
-        "num_epochs = 500\n",
-        "for epoch in range(num_epochs):\n",
-        "    model.train()\n",
-        "    optimizer.zero_grad()\n",
-        "    outputs = model(X_train_tensor)\n",
-        "    loss = criterion(outputs, y_train_tensor)\n",
-        "    loss.backward()\n",
-        "    optimizer.step()\n",
-        "    if (epoch+1) % 50 == 0:\n",
-        "        print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}')\n",
-        "\n",
-        "# Predictions (PyTorch)\n",
-        "model.eval()\n",
-        "y_pred_pytorch = model(X_test_tensor).detach().numpy()\n",
-        "\n",
-        "# Define TensorFlow Model\n",
-        "tf_model = keras.Sequential([\n",
-        "    keras.layers.Dense(512, activation='relu', input_shape=(X_train.shape[1],)),\n",
-        "    keras.layers.Dropout(0.2),\n",
-        "    keras.layers.Dense(256, activation='relu'),\n",
-        "    keras.layers.Dense(128, activation='relu'),\n",
-        "    keras.layers.Dense(1)\n",
-        "])\n",
-        "\n",
-        "tf_model.compile(optimizer=keras.optimizers.Adam(learning_rate=0.0001), loss='mse')\n",
-        "\n",
-        "# Train TensorFlow model\n",
-        "es = EarlyStopping(monitor='val_loss', patience=15, restore_best_weights=True)\n",
-        "tf_model.fit(X_train, y_train, epochs=500, batch_size=64, verbose=0, validation_data=(X_test, y_test), callbacks=[es])\n",
-        "\n",
-        "# Predictions (TensorFlow)\n",
-        "y_pred_tf = tf_model.predict(X_test)\n",
-        "\n",
-        "# Inverse transform predictions\n",
-        "y_pred_pytorch = scaler_y.inverse_transform(y_pred_pytorch)\n",
-        "y_pred_tf = scaler_y.inverse_transform(y_pred_tf)\n",
-        "y_test = scaler_y.inverse_transform(y_test)\n",
-        "\n",
-        "# Evaluation metrics\n",
-        "def evaluate_model(y_true, y_pred, model_name):\n",
-        "    mse = mean_squared_error(y_true, y_pred)\n",
-        "    rmse = np.sqrt(mse)\n",
-        "    r2 = r2_score(y_true, y_pred)\n",
-        "    print(f'{model_name} Evaluation:')\n",
-        "    print(f'MSE: {mse:.4f}, RMSE: {rmse:.4f}, R2 Score: {r2:.4f}')\n",
-        "\n",
-        "evaluate_model(y_test, y_pred_pytorch, \"PyTorch Model\")\n",
-        "evaluate_model(y_test, y_pred_tf, \"TensorFlow Model\")\n",
-        "\n",
-        "# Visualization\n",
-        "plt.figure(figsize=(12, 6))\n",
-        "plt.subplot(1, 2, 1)\n",
-        "plt.scatter(y_test, y_pred_pytorch, color='blue', alpha=0.6)\n",
-        "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'r--')\n",
-        "plt.xlabel('Actual')\n",
-        "plt.ylabel('Predicted')\n",
-        "plt.title('PyTorch Predictions')\n",
-        "\n",
-        "plt.subplot(1, 2, 2)\n",
-        "plt.scatter(y_test, y_pred_tf, color='green', alpha=0.6)\n",
-        "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'r--')\n",
-        "plt.xlabel('Actual')\n",
-        "plt.ylabel('Predicted')\n",
-        "plt.title('TensorFlow Predictions')\n",
-        "\n",
-        "plt.show()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 458
-        },
-        "id": "pI8yyvpmMYyv",
-        "outputId": "2d149dfb-ecae-4e65-d2ab-ac16091fc34c"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>income</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>&lt;=50K</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>&lt;=50K</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>&lt;=50K</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>&lt;=50K</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>&lt;=50K</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>48837</th>\n",
-              "      <td>&lt;=50K.</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>48838</th>\n",
-              "      <td>&lt;=50K.</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>48839</th>\n",
-              "      <td>&lt;=50K.</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>48840</th>\n",
-              "      <td>&lt;=50K.</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>48841</th>\n",
-              "      <td>&gt;50K.</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>48842 rows × 1 columns</p>\n",
-              "</div><br><label><b>dtype:</b> object</label>"
-            ],
-            "text/plain": [
-              "0         <=50K\n",
-              "1         <=50K\n",
-              "2         <=50K\n",
-              "3         <=50K\n",
-              "4         <=50K\n",
-              "          ...  \n",
-              "48837    <=50K.\n",
-              "48838    <=50K.\n",
-              "48839    <=50K.\n",
-              "48840    <=50K.\n",
-              "48841     >50K.\n",
-              "Name: income, Length: 48842, dtype: object"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "df = pd.read_csv('income.csv')\n",
-        "df['income']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
           "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
@@ -436,7 +79,12 @@
         }
       ],
       "source": [
-        "# 📌 Import Library\n",
+        "# Andi  Sutra khusnul Karima\n",
+        "#1103220033\n",
+        "#1. Buat model Deep learning (PyTorch and Tensorflow).\n",
+        "#2. Bandingkan Matriks Evaluasi (Akurasi,Presisi,Recall,F1Squared, AUC, ROC). Matriks Evaluasi mana yang terbaik? Jelaskan!\n",
+        "#3. Beri penjelasan untuk setiap persamaan matematika yang ada.\n",
+        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import requests\n",
@@ -592,7 +240,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4WDdYUUGqamW6XbTcpDIN",
+      "authorship_tag": "ABX9TyOdwd2JPre0PCfmJZCXOmvM",
       "include_colab_link": true
     },
     "kernelspec": {
